--- a/classifier/src/classifier.ipynb
+++ b/classifier/src/classifier.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import h5py\n",
     "import os\n",
-    "from ECG_classifier import Model\n",
+    "from ECG_classifier import Classifier\n",
     "\n",
     "encoding = 'NAVR'\n",
     "freq = [0]*len(encoding)\n",
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Model().cuda()"
+    "model = Classifier().cuda()"
    ]
   },
   {
